# noteshell

./: README.md  pyproject.toml
noteshell/: __init__.py  cli.py
obsnote/: __init__.py  cli.py
tests/: test_cli.py
