[project]
name = "noteshell"
version = "0.2.0"
description = "Capture shell commands, command output, and notes into an Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "crashNburn23"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = []

[project.scripts]
noteshell = "noteshell.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
